--- a/Interpreter-APO/build.xml
+++ b/Interpreter-APO/build.xml
@@ -68,7 +68,7 @@
   </target>
 
   <target name="jar" depends="build">
-    <delete>
+    <delete verbose="true">
       <fileset dir="." includes="apolang-*.jar" />
     </delete>
     <jar destfile="apolang-${jar.version}.jar" basedir="${build.dir}"
@@ -88,6 +88,7 @@
 
   <target name="execfile" depends="jar">
     <delete file="${exec.file}" />
+    <echo message="Building file: ${basedir}/${exec.file}" />
     <echo file="${exec.file}"
           message="#! /bin/sh${line.separator}${line.separator}java -jar $(dirname $0)/apolang-${jar.version}.jar $@" />
     <chmod file="${exec.file}" perm="+x" />
