--- a/converter/CMakeLists.txt
+++ b/converter/CMakeLists.txt
@@ -13,12 +13,14 @@ link_directories(${GTKMM_LIBRARY_DIRS})
 
 # SOURCES
 include_directories("${PROJECT_SOURCE_DIR}/include")
-set(CMD_SOURCES "${PROJECT_SOURCE_DIR}/src/converter.cpp"
-                "${PROJECT_SOURCE_DIR}/src/cmd_app.cpp"
-                "${PROJECT_SOURCE_DIR}/src/cmd_main.cpp")
-set(GTK_SOURCES "${PROJECT_SOURCE_DIR}/src/converter.cpp"
-                "${PROJECT_SOURCE_DIR}/src/gtk_app.cpp"
-                "${PROJECT_SOURCE_DIR}/src/gtk_main.cpp")
+set(CMD_SOURCES
+    "${PROJECT_SOURCE_DIR}/src/converter.cpp"
+    "${PROJECT_SOURCE_DIR}/src/cmd_app.cpp"
+    "${PROJECT_SOURCE_DIR}/src/cmd_main.cpp")
+set(GTK_SOURCES
+    "${PROJECT_SOURCE_DIR}/src/converter.cpp"
+    "${PROJECT_SOURCE_DIR}/src/gtk_app.cpp"
+    "${PROJECT_SOURCE_DIR}/src/gtk_main.cpp")
 
 # OUTPUT
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
