--- a/pi-generator/CMakeLists.txt
+++ b/pi-generator/CMakeLists.txt
@@ -12,7 +12,10 @@ include_directories(${GTKMM_INCLUDE_DIRS})
 link_directories(${GTKMM_LIBRARY_DIRS})
 
 # SOURCES
-set(SOURCES "generator.cpp")
+include_directories("${PROJECT_SOURCE_DIR}/include")
+set(SOURCES
+    "${PROJECT_SOURCE_DIR}/src/gtk_app.cpp"
+    "${PROJECT_SOURCE_DIR}/src/generator.cpp")
 
 # OUTPUT
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
