--- a/Converter/CMakeLists.txt
+++ b/Converter/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(converter VERSION 0.3.190612)
+project(Converter VERSION 0.3.190612)
 
 # COMPILER
 set(CMAKE_CXX_STANDARD 14)
