--- a/Lotto/CMakeLists.txt
+++ b/Lotto/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(generator VERSION 0.4.190612)
+project(Lotto VERSION 0.2.190612)
 
 # COMPILER
 set(CMAKE_CXX_STANDARD 14)
@@ -13,11 +13,9 @@ link_directories(${GTKMM_LIBRARY_DIRS})
 
 # SOURCES
 include_directories("${PROJECT_SOURCE_DIR}/include")
-set(SOURCES
-    "${PROJECT_SOURCE_DIR}/src/gtk_app.cpp"
-    "${PROJECT_SOURCE_DIR}/src/generator.cpp")
+set(SOURCES "lotto.cpp")
 
 # OUTPUT
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
-add_executable(generator ${SOURCES})
-target_link_libraries(generator ${GTKMM_LIBRARIES})
+add_executable(lotto ${SOURCES})
+target_link_libraries(lotto ${GTKMM_LIBRARIES})
