--- a/PI-Generator/CMakeLists.txt
+++ b/PI-Generator/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(lotto VERSION 0.2.190612)
+project(PI-Generator VERSION 0.4.190612)
 
 # COMPILER
 set(CMAKE_CXX_STANDARD 14)
@@ -13,9 +13,11 @@ link_directories(${GTKMM_LIBRARY_DIRS})
 
 # SOURCES
 include_directories("${PROJECT_SOURCE_DIR}/include")
-set(SOURCES "lotto.cpp")
+set(SOURCES
+    "${PROJECT_SOURCE_DIR}/src/gtk_app.cpp"
+    "${PROJECT_SOURCE_DIR}/src/pi_generator.cpp")
 
 # OUTPUT
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
-add_executable(lotto ${SOURCES})
-target_link_libraries(lotto ${GTKMM_LIBRARIES})
+add_executable(pi_generator ${SOURCES})
+target_link_libraries(pi_generator ${GTKMM_LIBRARIES})
