--- a/Ships-Game/CMakeLists.txt
+++ b/Ships-Game/CMakeLists.txt
@@ -1,13 +1,13 @@
 cmake_minimum_required(VERSION 3.5)
-project(statki VERSION 0.3.190423)
+project(Ships-Game VERSION 0.3.190423)
 
 # COMPILER
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-unknown-pragmas")
 
 # SOURCES
-set(SOURCES "statki.cpp")
+set(SOURCES "ships_game.cpp")
 
 # OUTPUT
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
-add_executable(statki ${SOURCES})
+add_executable(ships_game ${SOURCES})
