--- a/Converter/.gitignore
+++ b/Converter/.gitignore
@@ -1,4 +1,8 @@
-# [C++ , CMake]
-# output
-bin
-build
+# [ C / C++ ]
+# C / C++ / CMake output
+bin/
+build/
+dist/
+
+# Visual Studio Code
+.vscode
