--- a/Converter/CMakeLists.txt
+++ b/Converter/CMakeLists.txt
@@ -12,18 +12,18 @@ include_directories(${GTKMM_INCLUDE_DIRS})
 link_directories(${GTKMM_LIBRARY_DIRS})
 
 # SOURCES
-include_directories("${PROJECT_SOURCE_DIR}/include")
+include_directories(include)
 set(CMD_SOURCES
-    "${PROJECT_SOURCE_DIR}/src/converter.cpp"
-    "${PROJECT_SOURCE_DIR}/src/cmd_app.cpp"
-    "${PROJECT_SOURCE_DIR}/src/cmd_main.cpp")
+    src/converter.cpp
+    src/cmd_app.cpp
+    src/cmd_main.cpp)
 set(GTK_SOURCES
-    "${PROJECT_SOURCE_DIR}/src/converter.cpp"
-    "${PROJECT_SOURCE_DIR}/src/gtk_app.cpp"
-    "${PROJECT_SOURCE_DIR}/src/gtk_main.cpp")
+    src/converter.cpp
+    src/gtk_app.cpp
+    src/gtk_main.cpp)
 
 # OUTPUT
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)
 add_executable(converter ${CMD_SOURCES})
 add_executable(converter-gtk ${GTK_SOURCES})
 target_link_libraries(converter-gtk ${GTKMM_LIBRARIES})
