--- a/Converter/CMakeLists.txt
+++ b/Converter/CMakeLists.txt
@@ -1,9 +1,14 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.10)
 project(Converter VERSION 0.3.190612)
+
+# PROPERTIES
+set(INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include")
+set(SRC_DIR "${PROJECT_SOURCE_DIR}/src")
+set(EXE_OUTPUT_DIR "${PROJECT_SOURCE_DIR}/bin")
 
 # COMPILER
 set(CMAKE_CXX_STANDARD 14)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-unknown-pragmas")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-unknown-pragmas -O2")
 
 # PACKAGES
 find_package(PkgConfig REQUIRED)
@@ -12,18 +17,7 @@ include_directories(${GTKMM_INCLUDE_DIRS})
 link_directories(${GTKMM_LIBRARY_DIRS})
 
 # SOURCES
-include_directories(include)
-set(CMD_SOURCES
-    src/converter.cpp
-    src/cmd_app.cpp
-    src/cmd_main.cpp)
-set(GTK_SOURCES
-    src/converter.cpp
-    src/gtk_app.cpp
-    src/gtk_main.cpp)
+include_directories("${INCLUDE_DIR}")
 
 # OUTPUT
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)
-add_executable(converter ${CMD_SOURCES})
-add_executable(converter-gtk ${GTK_SOURCES})
-target_link_libraries(converter-gtk ${GTKMM_LIBRARIES})
+add_subdirectory("${SRC_DIR}")
