--- a/Ships-Game/CMakeLists.txt
+++ b/Ships-Game/CMakeLists.txt
@@ -1,13 +1,17 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.10)
 project(Ships-Game VERSION 0.3.190423)
+
+# PROPERTIES
+set(INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include")
+set(SRC_DIR "${PROJECT_SOURCE_DIR}/src")
+set(EXE_OUTPUT_DIR "${PROJECT_SOURCE_DIR}/bin")
 
 # COMPILER
 set(CMAKE_CXX_STANDARD 14)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-unknown-pragmas")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-unknown-pragmas -O2")
 
 # SOURCES
-set(SOURCES ships_game.cpp)
+include_directories("${INCLUDE_DIR}")
 
 # OUTPUT
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)
-add_executable(ships_game ${SOURCES})
+add_subdirectory("${SRC_DIR}")
