--- a/PI-Generator/CMakeLists.txt
+++ b/PI-Generator/CMakeLists.txt
@@ -1,23 +1,17 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.10)
 project(PI-Generator VERSION 0.4.190612)
+
+# PROPERTIES
+set(INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include")
+set(SRC_DIR "${PROJECT_SOURCE_DIR}/src")
+set(EXE_OUTPUT_DIR "${PROJECT_SOURCE_DIR}/bin")
 
 # COMPILER
 set(CMAKE_CXX_STANDARD 14)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-unknown-pragmas")
-
-# PACKAGES
-find_package(PkgConfig REQUIRED)
-pkg_check_modules(GTKMM gtkmm-3.0)
-include_directories(${GTKMM_INCLUDE_DIRS})
-link_directories(${GTKMM_LIBRARY_DIRS})
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-unknown-pragmas -O2")
 
 # SOURCES
-include_directories(include)
-set(SOURCES
-    src/gtk_app.cpp
-    src/pi_generator.cpp)
+include_directories("${INCLUDE_DIR}")
 
 # OUTPUT
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)
-add_executable(pi_generator ${SOURCES})
-target_link_libraries(pi_generator ${GTKMM_LIBRARIES})
+add_subdirectory("${SRC_DIR}")
