--- a/Lotto/src/CMakeLists.txt
+++ b/Lotto/src/CMakeLists.txt
@@ -8,15 +8,14 @@ link_directories(${GTKMM_LIBRARY_DIRS})
 
 # SOURCES
 set(SOURCES
-    gtk_app.cpp
-    lotto.cpp
-    lotto_game.cpp)
+    "gtk_app.cpp"
+    "lotto.cpp"
+    "lotto_game.cpp")
 
-set(OLD_SOURCES
-    ../lotto.cpp)
+set(OLD_SOURCES "../lotto.cpp")
 
 # OUTPUT
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${EXE_OUTPUT_DIR}")
-add_executable(lotto ${OLD_SOURCES})
-add_executable(lotto-gtk ${SOURCES})
-target_link_libraries(lotto-gtk ${GTKMM_LIBRARIES})
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${EXE_OUTPUT_DIR})
+add_executable(${CMD_EXE_NAME} ${OLD_SOURCES})
+add_executable(${GTK_EXE_NAME} ${SOURCES})
+target_link_libraries(${GTK_EXE_NAME} ${GTKMM_LIBRARIES})
