--- a/Ships-Game/src/CMakeLists.txt
+++ b/Ships-Game/src/CMakeLists.txt
@@ -1,9 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
 
 # SOURCES
-set(SOURCES
-    ../ships_game.cpp)
+set(SOURCES "../ships_game.cpp")
 
 # OUTPUT
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${EXE_OUTPUT_DIR}")
-add_executable(ships_game ${SOURCES})
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${EXE_OUTPUT_DIR})
+add_executable(${EXE_NAME} ${SOURCES})
