--- a/PI-Generator/CMakeLists.txt
+++ b/PI-Generator/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.10)
 project(PI-Generator VERSION 0.4.190612)
 
 # PROPERTIES
+set(EXE_NAME pi_generator)
+
 set(INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include")
 set(SRC_DIR "${PROJECT_SOURCE_DIR}/src")
 set(EXE_OUTPUT_DIR "${PROJECT_SOURCE_DIR}/bin")
@@ -11,7 +13,7 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-unknown-pragmas -O2")
 
 # SOURCES
-include_directories("${INCLUDE_DIR}")
+include_directories(${INCLUDE_DIR})
 
 # OUTPUT
-add_subdirectory("${SRC_DIR}")
+add_subdirectory(${SRC_DIR})
