Unified output directory

--- a/Converter/CMakeLists.txt
+++ b/Converter/CMakeLists.txt
@@ -4,7 +4,8 @@ project(Converter VERSION 0.3.190612)
 # PROPERTIES
 set(INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include")
 set(SRC_DIR "${PROJECT_SOURCE_DIR}/src")
-set(EXE_OUTPUT_DIR "${PROJECT_SOURCE_DIR}/bin")
+set(OUTPUT_DIR "${PROJECT_SOURCE_DIR}/buildOut")
+set(EXE_OUTPUT_DIR "${OUTPUT_DIR}/bin")
 
 # COMPILER
 set(CMAKE_CXX_STANDARD 14)
