--- a/Lotto/CMakeLists.txt
+++ b/Lotto/CMakeLists.txt
@@ -8,9 +8,10 @@ set(GTK_EXE_NAME lotto-gtk)
 set(INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include")
 set(SRC_DIR "${PROJECT_SOURCE_DIR}/src")
 set(TEST_DIR "${PROJECT_SOURCE_DIR}/test")
-set(EXE_OUTPUT_DIR "${PROJECT_SOURCE_DIR}/bin")
-set(LIB_OUTPUT_DIR "${PROJECT_SOURCE_DIR}/dist")
-set(DOCS_OUTPUT_DIR "${PROJECT_SOURCE_DIR}/docs")
+set(OUTPUT_DIR "${PROJECT_SOURCE_DIR}/buildOut")
+set(EXE_OUTPUT_DIR "${OUTPUT_DIR}/bin")
+set(LIB_OUTPUT_DIR "${OUTPUT_DIR}/dist")
+set(DOCS_OUTPUT_DIR "${OUTPUT_DIR}/docs")
 
 # COMPILER
 set(CMAKE_CXX_STANDARD 14)
