--- a/PI-Generator/CMakeLists.txt
+++ b/PI-Generator/CMakeLists.txt
@@ -6,7 +6,8 @@ set(EXE_NAME pi_generator)
 
 set(INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include")
 set(SRC_DIR "${PROJECT_SOURCE_DIR}/src")
-set(EXE_OUTPUT_DIR "${PROJECT_SOURCE_DIR}/bin")
+set(OUTPUT_DIR "${PROJECT_SOURCE_DIR}/buildOut")
+set(EXE_OUTPUT_DIR "${OUTPUT_DIR}/bin")
 
 # COMPILER
 set(CMAKE_CXX_STANDARD 14)
