--- a/Battleships-Game/src/CMakeLists.txt
+++ b/Battleships-Game/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 
 # SOURCES
-set(SOURCES "../ships_game.cpp")
+set(SOURCES "../battleships_game.cpp")
 
 # OUTPUT
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${EXE_OUTPUT_DIR})
