Test exe output dir

--- a/Converter/CMakeLists.txt
+++ b/Converter/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SRC_DIR "${PROJECT_SOURCE_DIR}/src")
 set(TEST_DIR "${PROJECT_SOURCE_DIR}/test")
 set(OUTPUT_DIR "${PROJECT_SOURCE_DIR}/buildOut")
 set(EXE_OUTPUT_DIR "${OUTPUT_DIR}/bin")
+set(TEST_EXE_OUTPUT_DIR "${OUTPUT_DIR}/test")
 set(LIB_OUTPUT_DIR "${OUTPUT_DIR}/dist")
 
 # COMPILER
