--- a/Converter/test/CMakeLists.txt
+++ b/Converter/test/CMakeLists.txt
@@ -12,7 +12,7 @@ find_package(Threads REQUIRED)
 set(TEST_SOURCES "converter_test.cpp")
 
 # OUTPUT
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${EXE_OUTPUT_DIR}/test")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${TEST_EXE_OUTPUT_DIR}")
 foreach(testsource ${TEST_SOURCES})
     get_filename_component(testexec ${testsource} NAME_WE)
     add_executable(${testexec} ${testsource})
