Fix GTest in CMake

--- a/Converter/CMakeLists.txt
+++ b/Converter/CMakeLists.txt
@@ -33,6 +33,9 @@ include_directories(${INCLUDE_DIR})
 add_subdirectory(${SRC_DIR})
 
 if(GTEST_FOUND)
+    message(STATUS "GTest found")
     include(CTest)
     add_subdirectory(${TEST_DIR})
+else()
+    message(WARNING "GTest not found - skipping tests")
 endif()
